githubaction - reusable pipeline

--- a/.github/workflow/terraform.yaml
+++ b/.github/workflow/terraform.yaml
@@ -10,7 +10,7 @@ on:
         required: true
   
 jobs:
-  terraform-apply:
+  action:
     runs-on: self-hosted
     steps:
     - uses: actions/checkout@v4
