--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,20 +1,34 @@
-name: CI
+#name: CI
+#on:
+#  workflow_call:
+#    inputs:
+#      component:
+#        required: true
+#        type: string
+#jobs:
+#  TEST:
+#    runs-on: self-hosted
+#    environment: DEV
+#    steps:
+#    - name: Checkout ${{ inputs.component }} Helm repo
+#      uses: actions/checkout@v4
+#      with:
+#        repository: azawsdevops/aks-roboshop-helm
+#    - run: |
+#        bash argocd.sh ${{ inputs.component }} dev
+#        echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+#  
+name: Reusable workflow example -CI
+
 on:
   workflow_call:
     inputs:
       component:
         required: true
         type: string
-jobs:
-  TEST:
-    runs-on: self-hosted
-    environment: DEV
-    steps:
-    - name: Checkout ${{ inputs.component }} Helm repo
-      uses: actions/checkout@v4
-      with:
-        repository: azawsdevops/aks-roboshop-helm
-    - run: |
-        bash argocd.sh ${{ inputs.component }} dev
-        echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-  
+  jobs:
+    ci:
+      runs-on: self-hosted
+      steps:
+      - uses: actions/checkout@v4
+        run: ls -l
