githubaction - reusable pipeline

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,9 +8,10 @@ on:
         type: string
 
 jobs:
-  dev:
+  deploy:
     runs-on: self-hosted
     steps:
+      name: checkout code
       uses: actions/checkout@v4
       with:
         component: cart
