--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -12,6 +12,6 @@ jobs:
     runs-on: self-hosted
     steps:
       name: checkout code
-      uses: actions/checkout@v4
+      run: ls -l
       with:
         component: cart
