--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,7 +31,14 @@ jobs:
         elif [ ${{ inputs.appType }} == python ]; then
           pip3 install -r requirement.txt
         fi
-          
+  
+  code-quality:
+    runs-on: self-hosted
+    needs: app-dependencies
+    steps:
+      name: Running Code quality checks
+      run: |
+        
          
   unit tests:
     runs-on: self-hosted
