--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -28,11 +28,11 @@ jobs:
     steps:
     - name: Downloading app dependencies
       run: |
-        if [[ "${{ inputs.appType }}" == "maven" ]]; then
+        if [[ ${{ inputs.appType }} == maven ]]; then
           mvn clean package
-        elif [[ "${{ inputs.appType }}" == "nodejs" ]]; then
+        elif [[ ${{ inputs.appType }} == nodejs ]]; then
           npm install
-        elif [[ "${{ inputs.appType }}" == "python" ]]; then
+        elif [[ ${{ inputs.appType }} == python ]]; then
           pip3 install -r requirements.txt
         fi
   
