--- a/.github/workflows/dev-branch.yaml
+++ b/.github/workflows/dev-branch.yaml
@@ -6,6 +6,8 @@ on:
       component:
         required: true
         type: string
+    secrets:
+      VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
 jobs:
   code-checkout:
     runs-on: self-hosted
