--- a/.github/workflows/dev-branch.yaml
+++ b/.github/workflows/dev-branch.yaml
@@ -11,7 +11,7 @@ on:
         type: string
     secrets:
       VAULT_TOKEN: ${{ secrets.VAULT_TOKEN }}
-
+      
 jobs:
   code-checkout:
     runs-on: self-hosted
@@ -20,6 +20,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: azawsdevops/roboshop-${{ inputs.component }}
+  
   
   app-dependencies:
     runs-on: self-hosted
@@ -35,4 +36,19 @@ jobs:
           npm install
         elif [[ ${{ inputs.appType }} == python ]]; then
           pip3 install -r requirements.txt
+        fi
+        # Python we are ignoring as downloading dependencies is of no use in CI.
+  
+  unit-tests:
+    runs-on: self-hosted
+    needs: app-dependencies
+    steps:
+    - name: Unit Tests
+      run: |
+        if [ ${{ inputs.appType }} == maven ]; then
+          echo mvn test
+        elif [ ${{ inputs.appType }} == nodejs ];then
+          echo npm test
+        elif [ ${{ inputs.appType }} == python ];then
+          echo python -m unittest
         fi
