--- a/.github/workflows/ci-main-branch.yaml
+++ b/.github/workflows/ci-main-branch.yaml
@@ -23,10 +23,10 @@ jobs:
         url: http://vault-internal.cloudaws.shop:8200
         token: ${{ secrets.VAULT_TOKEN }}
         secrets: |
-          github-action/data/azure_sp/ARM_CLIENT_ID | ARM_CLIENT_ID ;
-          github-action/data/azure_sp/ARM_CLIENT_SECRET | ARM_CLIENT_SECRET ;
-          github-action/data/azure_sp/ARM_SUBSCRIPTION_ID | ARM_SUBSCRIPTION_ID ;
-          github-action/data/azure_sp/ARM_TENANT_ID | ARM_TENANT_ID ;
+          github-action/data/azure_sp ARM_CLIENT_ID | ARM_CLIENT_ID ;
+          github-action/data/azure_sp ARM_CLIENT_SECRET | ARM_CLIENT_SECRET ;
+          github-action/data/azure_sp ARM_SUBSCRIPTION_ID | ARM_SUBSCRIPTION_ID ;
+          github-action/data/azure_sp ARM_TENANT_ID | ARM_TENANT_ID ;
     - name: Tag images
       run: |
         az acr login --name cloudaws
