--- a/.github/workflows/ci-main-branch.yaml
+++ b/.github/workflows/ci-main-branch.yaml
@@ -29,7 +29,7 @@ jobs:
           github-action/data/azure_sp ARM_TENANT_ID | ARM_TENANT_ID ;
     - name: Tag images
       run: |
-        az acr login --name cloudaws
+        az acr login --name cloudaws --expose-token
         docker build -t cloudaws.azurecr.io/roboshop-${{ inputs.component }}:${{ github.sha }} .
   
   push-images:
