--- a/.github/workflows/dev-branch.yaml
+++ b/.github/workflows/dev-branch.yaml
@@ -21,6 +21,8 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: azawsdevops/roboshop-${{ inputs.component }}
+    - name: see
+      run: ls -l
   
   
   app-dependencies:
