--- a/.github/workflows/ci-main-branch.yaml
+++ b/.github/workflows/ci-main-branch.yaml
@@ -51,4 +51,4 @@ jobs:
     steps:
     - name: Push Docker images
       run: |
-        echo "docker push cloudaws.azurecr.io/roboshop-${{ inputs.component }}:${{ github.sha }}"
+          docker push cloudaws.azurecr.io/roboshop-${{ inputs.component }}:${{ github.sha }}
