--- a/.github/workflows/ci-main-branch.yaml
+++ b/.github/workflows/ci-main-branch.yaml
@@ -30,6 +30,15 @@ jobs:
   build-images:
     runs-on: self-hosted
     steps:
+    - name: Tag images
+      run: |
+        az acr login --name cloudaws --expose-token
+        docker build -t cloudaws.azurecr.io/roboshop-${{ inputs.component }}:${{ github.sha }} .
+
+  push-images:
+    runs-on: self-hosted
+    needs: build-images
+    steps:
     - name: Import Secrets
       uses: hashicorp/vault-action@v2.4.0
       with:
@@ -40,15 +49,7 @@ jobs:
           github-action/data/azure_sp ARM_CLIENT_SECRET | ARM_CLIENT_SECRET ;
           github-action/data/azure_sp ARM_SUBSCRIPTION_ID | ARM_SUBSCRIPTION_ID ;
           github-action/data/azure_sp ARM_TENANT_ID | ARM_TENANT_ID ;
-    - name: Tag images
-      run: |
-        az acr login --name cloudaws --expose-token
-        docker build -t cloudaws.azurecr.io/roboshop-${{ inputs.component }}:${{ github.sha }} .
-
-  push-images:
-    runs-on: self-hosted
-    needs: build-images
-    steps:
     - name: Push Docker images
       run: |
+          az acr login --name cloudaws
           docker push cloudaws.azurecr.io/roboshop-${{ inputs.component }}:${{ github.sha }}
