--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,7 +14,7 @@ jobs:
     - name: Checkout  repos
       uses: actions/checkout@v4
       with:
-        repository: azawsdevops/aks-roboshop-helm
+        repository: azawsdevops/roboshop-${{ inputs.component }}
         run: |
           bash argocd.sh {{ inputs.component }} dev cloudaws.azurecr.io/roboshop-${{ inputs.component }}:${{ github.sha }}
         
