--- a/.github/workflows/ci-main-branch.yaml
+++ b/.github/workflows/ci-main-branch.yaml
@@ -14,18 +14,13 @@ on:
         required: true
 
 jobs:
-#  checkout-code:
-#    runs-on: self-hosted
-#    steps:
-#    - name: Checkout repo
-#      uses: actions/checkout@v4
-#      with:
-#        repository: azawsdevops/roboshop-cart
-#        ref: main
-#    - name: Debug - List files
-#      run: ls -R
-#    - name: Debug - Print Working Directory
-#      run: pwd
+  code-checkout:
+    runs-on: self-hosted
+    steps:
+    - name: Checkout repo
+      uses: actions/checkout@v4
+      with:
+        repository: azawsdevops/roboshop-${{ inputs.component }}
 
   build-images:
     runs-on: self-hosted
