--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,7 +18,7 @@ jobs:
         repository: azawsdevops/aks-roboshop-helm
     - name: deployment
       run: |
-        bash argocd.sh {{ inputs.component }} dev cloudaws.azurecr.io/roboshop-${{ inputs.component }}:${GITHUB_SHA}
+        bash argocd.sh ${{ inputs.component }} dev cloudaws.azurecr.io/roboshop-${{ inputs.component }}:${GITHUB_SHA}
       
   
   QA:
