--- a/.github/workflows/ci-main-branch.yaml
+++ b/.github/workflows/ci-main-branch.yaml
@@ -21,6 +21,10 @@ jobs:
       uses: actions/checkout@v4
       with:
         repository: azawsdevops/roboshop-${{ inputs.component }}
+        
+    - name: Clear GitHub Actions cache
+      run: |
+        rm -rf /github-runner/_work/_temp
 
   build-images:
     runs-on: self-hosted
